--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:45:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:45:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -324,12 +324,12 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 2</td>
-      <td>Jon Rahm +2
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 5</td>
-      <td class="greyout leftborder">Robert MacIntyre +3
+      <td class="greyout">Robert MacIntyre +3
 +1 thru 4</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -422,8 +422,8 @@ Not started</td>
 E thru 2</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -470,8 +470,8 @@ Not started</td>
 Not started</td>
       <td>Tiger Woods +1
 E thru 3</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +3
-+1 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
+E thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -584,8 +584,24 @@ Not started</td>
 E thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +2
 -2 thru 14</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 6</td>
+      <td class="greyout">Rory McIlroy +2
+E thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 5</td>
+      <td>Viktor Hovland +2
+-2 thru 14</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -628,27 +644,11 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm +2
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 6</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 5</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td>Rory McIlroy +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -726,8 +726,8 @@ Not started</td>
 E thru 3</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 7</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -742,8 +742,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+1 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 7</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -759,6 +759,22 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 5</td>
       <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 5</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -786,12 +802,12 @@ Missed Cut</td>
 Not started</td>
       <td>Patrick Cantlay +1
 E thru 2</td>
+      <td>Rory McIlroy(W) +2
+E thru 7</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td>Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 5</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +3
-+1 thru 6</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -808,22 +824,6 @@ E thru 5</td>
 +1 thru 4</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 8</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 5</td>
-      <td>Rory McIlroy +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -845,15 +845,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Patrick Cantlay(W) +1
 E thru 2</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
       <td>Jon Rahm +2
 E thru 5</td>
-      <td>Rory McIlroy +3
-+1 thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -861,15 +861,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Jon Rahm(W) +2
 E thru 5</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td>Rory McIlroy +3
-+1 thru 6</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
       <td class="greyout leftborder">Bubba Watson +5
 +3 thru 4</td>
       <td class="greyout">Jordan Spieth
