--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:45:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:45:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -230,10 +230,10 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+      <td class="greyout leftborder">Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout">Tommy Fleetwood(W) +3
 E thru 11</td>
-      <td class="greyout">Rory McIlroy +3
-+1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -249,6 +249,22 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 2</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -281,22 +297,6 @@ Not started</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 8</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 2</td>
-      <td>Rory McIlroy +3
-+1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
