--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:47:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:47:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -316,6 +316,22 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick E
+E thru 2</td>
+      <td>Patrick Cantlay +1
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler(W) -8
@@ -348,22 +364,6 @@ E thru 2</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 2</td>
-      <td>Matthew Fitzpatrick +1
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-7</td>
       <td>Hideki Matsuyama -3
@@ -390,8 +390,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +1
-+1 thru 1</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick E
+E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -652,6 +652,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-1</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Dustin Johnson(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick E
+E thru 2</td>
+      <td>Tony Finau +4
++2 thru 9</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
@@ -665,22 +681,6 @@ E thru 6</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">0</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Dustin Johnson(W) -2
-Not started</td>
-      <td>Matthew Fitzpatrick +1
-+1 thru 1</td>
-      <td>Tony Finau +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
