--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:53:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:54:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
@@ -179,7 +179,7 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -373,7 +373,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Marc Leishman +3
 -1 thru 13</td>
       <td class="greyout">Xander Schauffele
@@ -387,7 +387,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
@@ -401,7 +401,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +1
 E thru 3</td>
       <td>Viktor Hovland +2
@@ -451,7 +451,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +1
 E thru 3</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -467,7 +467,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Tiger Woods +1
 E thru 4</td>
       <td class="greyout leftborder">Rory McIlroy(W) +2
@@ -513,7 +513,7 @@ E thru 6</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Patrick Cantlay +1
@@ -563,7 +563,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -577,7 +577,7 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Tiger Woods(W) +1
@@ -625,7 +625,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +1
 E thru 3</td>
       <td>Jon Rahm(W) +2
@@ -639,7 +639,7 @@ Missed Cut</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Will Zalatoris -1
@@ -705,7 +705,7 @@ Missed Cut</td>
       <td>Collin Morikawa(W) -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Tiger Woods +1
 E thru 4</td>
       <td>Viktor Hovland +2
@@ -751,7 +751,7 @@ Missed Cut</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Viktor Hovland +2
@@ -769,7 +769,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +2
 E thru 6</td>
       <td>Rory McIlroy +2
@@ -783,7 +783,7 @@ Missed Cut</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Jon Rahm(W) +2
@@ -831,7 +831,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +1
 E thru 3</td>
       <td>Viktor Hovland +2
@@ -847,7 +847,7 @@ Missed Cut</td>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay(W) +1
 E thru 3</td>
       <td>Rory McIlroy +2
