--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:53:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:54:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +1
@@ -179,7 +179,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick E
@@ -193,7 +193,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Patrick Cantlay +1
@@ -209,7 +209,7 @@ E thru 6</td>
       <td>Sungjae Im -3
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Patrick Cantlay +1
@@ -225,7 +225,7 @@ Missed Cut</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Joaquin Niemann -1
 Not started</td>
       <td>Viktor Hovland +2
@@ -243,7 +243,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -273,7 +273,7 @@ Missed Cut</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Justin Thomas -1
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Russell Henley +3
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 Not started</td>
       <td>Will Zalatoris -1
