--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:58:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:59:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -229,7 +229,7 @@ Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Webb Simpson E
--1 thru 3</td>
+-1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 6</td>
       <td class="greyout">Xander Schauffele
@@ -265,6 +265,22 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 -2 thru 14</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 3</td>
+      <td>Patrick Cantlay +1
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -314,22 +330,6 @@ Not started</td>
 -2 thru 14</td>
       <td class="greyout">Jon Rahm +2
 E thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Matthew Fitzpatrick E
-E thru 2</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -388,11 +388,27 @@ Not started</td>
 Not started</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
-      <td>Will Zalatoris -1
+      <td>Matthew Fitzpatrick -1
+-1 thru 3</td>
+      <td class="greyout leftborder">Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick E
-E thru 2</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 3</td>
+      <td>Billy Horschel +4
++1 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -425,22 +441,6 @@ E thru 3</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 6</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td>Billy Horschel +5
-+2 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -588,6 +588,22 @@ E thru 4</td>
 E thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Dustin Johnson(W) -2
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 3</td>
+      <td>Tony Finau +4
++2 thru 10</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -8
@@ -649,22 +665,6 @@ E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 6</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-1</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Dustin Johnson(W) -2
-Not started</td>
-      <td>Matthew Fitzpatrick E
-E thru 2</td>
-      <td>Tony Finau +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -732,22 +732,6 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td>Adam Scott +9
-+5 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas(W) -1
@@ -809,6 +793,22 @@ E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 6</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +1
+E thru 3</td>
+      <td>Adam Scott +10
++6 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
