--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:58:43 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:59:26 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -180,10 +180,10 @@ Not started</td>
 Not started</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
-      <td>Will Zalatoris -1
+      <td>Matthew Fitzpatrick -1
+-1 thru 3</td>
+      <td class="greyout leftborder">Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick E
-E thru 2</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
