--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 1:59:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:00:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-E thru 3</td>
+      <td class="greyout leftborder">Patrick Cantlay +2
++1 thru 4</td>
       <td class="greyout">Tony Finau +4
 +2 thru 10</td>
     </tr>
@@ -189,33 +189,33 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 E thru 6</td>
+      <td class="greyout leftborder">Patrick Cantlay +2
++1 thru 4</td>
       <td class="greyout">Tyrrell Hatton +4
 +2 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -3
 Not started</td>
       <td>Justin Thomas -1
 E thru 1</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
+      <td>Viktor Hovland(W) +2
 -2 thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +2
++1 thru 4</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -252,22 +252,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td>Rory McIlroy +2
-E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -300,6 +284,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">3</td>
       <td>Corey Conners(W) -1
@@ -317,32 +317,16 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Dustin Johnson -2
 Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
       <td>Jon Rahm +2
 E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Patrick Cantlay +1
-E thru 3</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td>Tony Finau +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
@@ -361,6 +345,22 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 6</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Tony Finau +4
++2 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
