--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:00:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:01:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -227,7 +227,7 @@ Not started</td>
       <td>Justin Thomas -1
 E thru 1</td>
       <td>Joaquin Niemann -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +2
 -2 thru 14</td>
       <td class="greyout leftborder">Rory McIlroy +2
