--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:02:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:03:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +3
-E thru 10</td>
+      <td class="greyout leftborder">Russell Henley +4
++1 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--2 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -262,25 +262,9 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--2 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland(W) +2
--2 thru 14</td>
-      <td class="greyout leftborder">Tyrrell Hatton +4
-+2 thru 6</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -310,10 +294,10 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout">Jon Rahm +2
+      <td class="greyout leftborder">Jon Rahm +2
 E thru 6</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -329,6 +313,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Tyrrell Hatton +4
++2 thru 6</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -420,10 +420,10 @@ Not started</td>
 E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -436,10 +436,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay(W) +2
 +1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -486,25 +486,9 @@ Not started</td>
 E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--2 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry(W) -3
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Joaquin Niemann -1
-E thru 1</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -520,8 +504,8 @@ Not started</td>
 E thru 6</td>
       <td class="greyout leftborder">Patrick Cantlay +2
 +1 thru 4</td>
-      <td class="greyout">Viktor Hovland +2
--2 thru 14</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -535,22 +519,6 @@ Not started</td>
       <td>Jon Rahm +2
 E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -582,10 +550,10 @@ E thru 1</td>
 Not started</td>
       <td>Tiger Woods(W) +1
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout">Rory McIlroy +2
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 7</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -604,19 +572,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -8
+      <td>Shane Lowry(W) -3
 Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td>Rory McIlroy +2
-E thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
+      <td>Corey Conners -1
+Not started</td>
+      <td>Joaquin Niemann -1
+E thru 1</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -633,6 +617,22 @@ E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 6</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 6</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -692,10 +692,10 @@ Not started</td>
 E thru 1</td>
       <td>Tiger Woods +1
 E thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -708,10 +708,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 E thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -722,29 +722,13 @@ Missed Cut</td>
 Not started</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Viktor Hovland(W) +2
--2 thru 14</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 6</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
       <td>Jon Rahm +2
 E thru 6</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout leftborder">Viktor Hovland(W) +3
+-1 thru 15</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -764,17 +748,17 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas -1
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td>Jon Rahm(W) +2
+      <td>Jon Rahm +2
 E thru 6</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -796,6 +780,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 6</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">4</td>
       <td>Dustin Johnson -2
@@ -804,10 +804,10 @@ Not started</td>
 E thru 7</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 E thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -828,38 +828,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">4</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td>Rory McIlroy +2
-E thru 7</td>
-      <td class="greyout leftborder">Bubba Watson +6
-+4 thru 6</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -1
-E thru 1</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Daniel Berger +4
-+2 thru 9</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">5</td>
       <td>Justin Thomas -1
@@ -876,35 +844,51 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">5</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 6</td>
+      <td>Rory McIlroy +2
+E thru 7</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Bubba Watson +6
++4 thru 6</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">6</td>
+      <td>Justin Thomas(W) -1
+E thru 1</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Jon Rahm +2
+E thru 6</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Daniel Berger +4
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">7</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
       <td>Jon Rahm +2
 E thru 6</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Viktor Hovland(W) +2
--2 thru 14</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td>Patrick Reed +4
-+1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -918,6 +902,22 @@ E thru 6</td>
 +1 thru 4</td>
       <td>Tony Finau +4
 +2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm +2
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 15</td>
+      <td>Patrick Reed +4
++1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -940,8 +940,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Yellow in Augusta</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -1018,8 +1018,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Bryan Francis</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas(W)</td>
-      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Jon Rahm</td>
+      <td class="greyout">Viktor Hovland</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
