--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:02:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:03:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -212,10 +212,10 @@ Not started</td>
 E thru 1</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Viktor Hovland(W) +2
--2 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +2
+      <td>Patrick Cantlay +2
 +1 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
+-1 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -228,43 +228,27 @@ Not started</td>
 E thru 1</td>
       <td>Joaquin Niemann -1
 E thru 1</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 E thru 7</td>
-      <td class="greyout">Tommy Fleetwood(W) +3
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
 E thru 12</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 E thru 1</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Justin Thomas -1
-E thru 1</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Russell Henley +3
-E thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -300,6 +284,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Justin Thomas -1
+E thru 1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Russell Henley +4
++1 thru 11</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">3</td>
       <td>Corey Conners(W) -1
@@ -316,38 +316,6 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">6</td>
-      <td>Dustin Johnson -2
-Not started</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Viktor Hovland +2
--2 thru 14</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Viktor Hovland(W) +2
--2 thru 14</td>
-      <td>Jon Rahm +2
-E thru 6</td>
-      <td>Patrick Reed +4
-+1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Luke List
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">7</td>
       <td>Collin Morikawa -1
@@ -361,6 +329,38 @@ E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">7</td>
+      <td>Dustin Johnson -2
+Not started</td>
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Jon Rahm +2
+E thru 6</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Jon Rahm +2
+E thru 6</td>
+      <td>Viktor Hovland(W) +3
+-1 thru 15</td>
+      <td>Patrick Reed +4
++1 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Luke List
 Missed Cut</td>
     </tr>
     <tr>
