--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:03:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:04:27 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -252,6 +252,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Cameron Smith(W) -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -8
@@ -265,22 +281,6 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 15</td>
       <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith(W) -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Talor Gooch +2
-E thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -444,6 +444,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-5</td>
+      <td>Hideki Matsuyama -3
+Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Talor Gooch +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 6</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-5</td>
       <td>Hideki Matsuyama -3
@@ -457,22 +473,6 @@ E thru 4</td>
       <td class="greyout leftborder">Rory McIlroy(W) +2
 E thru 7</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-4</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 6</td>
-      <td class="greyout leftborder">Talor Gooch +2
-E thru 9</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
