--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:03:44 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:04:27 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ Not started</td>
 E thru 1</td>
       <td>Joaquin Niemann -1
 E thru 1</td>
-      <td>Rory McIlroy +2
+      <td>Tommy Fleetwood(W) +2
+-1 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +2
 E thru 7</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-E thru 12</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
     </tr>
