--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:11:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -211,7 +211,7 @@ Not started</td>
       <td>Justin Thomas -2
 -1 thru 2</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +3
@@ -259,7 +259,7 @@ Missed Cut</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Tony Finau +4
 +2 thru 10</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -289,7 +289,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 8</td>
       <td>Patrick Cantlay +2
@@ -305,7 +305,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +3
 +1 thru 7</td>
       <td>Robert MacIntyre +3
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">8</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Jon Rahm(W) +3
@@ -351,7 +351,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">9</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 15</td>
       <td>Jon Rahm +3
