--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:54 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:11:37 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -531,7 +531,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 8</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
@@ -643,7 +643,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 8</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -673,7 +673,7 @@ Missed Cut</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Collin Morikawa(W) -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Jon Rahm +3
@@ -689,7 +689,7 @@ Missed Cut</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Viktor Hovland(W) +3
@@ -721,7 +721,7 @@ Missed Cut</td>
       <td>Justin Thomas -2
 -1 thru 2</td>
       <td>Collin Morikawa(W) -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 8</td>
       <td>Viktor Hovland +3
@@ -801,7 +801,7 @@ Missed Cut</td>
       <td>Corey Conners(W) -1
 Not started</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre +3
 +1 thru 6</td>
       <td>Jon Rahm +3
@@ -895,7 +895,7 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">8</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td>Jon Rahm(W) +3
@@ -911,7 +911,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">9</td>
       <td>Collin Morikawa -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 15</td>
       <td>Jon Rahm +3
