--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:30:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:31:42 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -289,11 +289,11 @@ Missed Cut</td>
       <td>Justin Thomas -3
 -2 thru 4</td>
       <td>Dustin Johnson -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td>Russell Henley +6
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
@@ -335,7 +335,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">8</td>
       <td>Dustin Johnson -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
       <td>Viktor Hovland +3
