--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:30:59 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:31:42 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -199,7 +199,7 @@ E thru 1</td>
       <td>Corey Conners -1
 E thru 1</td>
       <td class="greyout leftborder">Russell Henley +6
-+3 thru 12</td>
++3 thru 13</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Dustin Johnson(W) -2
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -2
 E thru 1</td>
       <td>Corey Conners -1
@@ -593,7 +593,7 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Dustin Johnson(W) -2
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 5</td>
       <td>Tony Finau +4
@@ -799,7 +799,7 @@ Missed Cut</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy(W) +2
 E thru 9</td>
       <td>Patrick Cantlay +2
@@ -849,7 +849,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Dustin Johnson -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
       <td>Adam Scott +12
@@ -879,7 +879,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">8</td>
       <td>Dustin Johnson -2
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
       <td>Viktor Hovland +3
