--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:42:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,35 +141,19 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Justin Thomas(W) -3
--2 thru 4</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td class="greyout leftborder">Patrick Cantlay +2
-+1 thru 6</td>
-      <td class="greyout">Tony Finau +4
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -188,51 +172,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td class="greyout leftborder">Patrick Cantlay +2
++1 thru 6</td>
+      <td class="greyout">Tony Finau +5
++3 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith(W) -3
 -1 thru 2</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td class="greyout leftborder">Russell Henley +6
 +3 thru 13</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-12</td>
-      <td>Scottie Scheffler -8
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Webb Simpson E
--1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 9</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -268,52 +236,36 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-11</td>
-      <td>Cameron Smith(W) -3
--1 thru 2</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td class="greyout leftborder">Marc Leishman +2
--2 thru 17</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
-      <td>Justin Thomas(W) -3
--2 thru 4</td>
-      <td>Shane Lowry -3
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-12</td>
+      <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
-      <td>Will Zalatoris -2
+      <td>Corey Conners -2
 -1 thru 2</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick -1
--1 thru 6</td>
-      <td class="greyout">Brooks Koepka
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-11</td>
-      <td>Cameron Smith(W) -3
--1 thru 2</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Hideki Matsuyama -3
+      <td>Scottie Scheffler -8
 Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm +4
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Webb Simpson E
+-1 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
 +2 thru 9</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -332,20 +284,52 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-10</td>
-      <td>Scottie Scheffler(W) -8
+      <td>Cameron Smith(W) -3
+-1 thru 2</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td class="greyout leftborder">Marc Leishman +2
+-2 thru 17</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-10</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Shane Lowry -3
+Not started</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 6</td>
+      <td class="greyout leftborder">Will Zalatoris -1
+E thru 3</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith(W) -3
+-1 thru 2</td>
+      <td>Shane Lowry -3
 Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Jon Rahm +4
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Jon Rahm +4
 +2 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -377,6 +361,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler(W) -8
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -412,22 +412,6 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-7</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Talor Gooch +1
--1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
-+2 thru 9</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-7</td>
       <td>Justin Thomas(W) -3
@@ -441,38 +425,6 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-7</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Rory McIlroy(W) +2
-E thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+2 thru 7</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-6</td>
-      <td>Justin Thomas(W) -3
--2 thru 4</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -492,20 +444,36 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Jon Rahm(W) +4
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td>Talor Gooch +1
+-1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
 +2 thru 9</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td>Rory McIlroy(W) +2
+E thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +3
++2 thru 7</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -540,14 +508,46 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">-5</td>
+      <td>Justin Thomas(W) -3
+-2 thru 4</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Jon Rahm(W) +4
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-4</td>
       <td>Justin Thomas -3
 -2 thru 4</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Rory McIlroy +2
 E thru 10</td>
       <td class="greyout leftborder">Tiger Woods(W) +3
@@ -557,34 +557,18 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Justin Thomas(W) -3
 -2 thru 4</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Rory McIlroy +2
 E thru 10</td>
       <td class="greyout leftborder">Jon Rahm +4
 +2 thru 9</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
--1 thru 2</td>
-      <td>Corey Conners(W) -2
--1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,14 +588,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
+-1 thru 2</td>
+      <td>Corey Conners(W) -2
+-1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-1</td>
       <td>Corey Conners -2
 -1 thru 2</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Rory McIlroy +2
 E thru 10</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -621,32 +621,16 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Dustin Johnson(W) -2
 E thru 1</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 6</td>
-      <td>Tony Finau +4
-+2 thru 12</td>
+      <td>Tony Finau +5
++3 thru 13</td>
       <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Justin Thomas -3
--2 thru 4</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm(W) +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -668,34 +652,18 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">1</td>
-      <td>Collin Morikawa -2
--1 thru 3</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Justin Thomas -3
+-2 thru 4</td>
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +4
+      <td>Jon Rahm(W) +4
 +2 thru 9</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -3
-Not started</td>
-      <td>Collin Morikawa(W) -2
--1 thru 3</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm +4
-+2 thru 9</td>
-      <td class="greyout leftborder">Paul Casey
-Out With Injury</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -732,6 +700,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">2</td>
       <td>Cameron Smith -3
@@ -748,12 +732,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">2</td>
+      <td>Collin Morikawa(W) -2
+-1 thru 3</td>
+      <td>Hideki Matsuyama -2
++1 thru 1</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Jon Rahm +4
++2 thru 9</td>
+      <td class="greyout leftborder">Paul Casey
+Out With Injury</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas(W) -3
 -2 thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm +4
@@ -765,11 +765,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas -3
 -2 thru 4</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Jon Rahm(W) +4
@@ -892,22 +892,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">8</td>
-      <td>Collin Morikawa -2
--1 thru 3</td>
-      <td>Patrick Cantlay +2
-+1 thru 6</td>
-      <td>Jon Rahm(W) +4
-+2 thru 9</td>
-      <td>Tony Finau +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">9</td>
       <td>Dustin Johnson -2
@@ -921,6 +905,22 @@ E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">9</td>
+      <td>Collin Morikawa -2
+-1 thru 3</td>
+      <td>Patrick Cantlay +2
++1 thru 6</td>
+      <td>Jon Rahm(W) +4
++2 thru 9</td>
+      <td>Tony Finau +5
++3 thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
