--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:42:32 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:43:15 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,29 +141,29 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Justin Thomas(W) -3
 -2 thru 4</td>
       <td>Shane Lowry -3
 Not started</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td class="greyout leftborder">Patrick Cantlay +2
 +1 thru 6</td>
-      <td class="greyout">Tony Finau +4
-+2 thru 12</td>
+      <td class="greyout">Tony Finau +5
++3 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
       <td>Jon Rahm +4
 +2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,17 +173,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Justin Thomas(W) -3
 -2 thru 4</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Cameron Smith -3
 -1 thru 2</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick -1
+      <td>Matthew Fitzpatrick -1
 -1 thru 6</td>
+      <td class="greyout leftborder">Will Zalatoris -1
+E thru 3</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -253,15 +253,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -3
 -2 thru 4</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
-      <td>Will Zalatoris -2
--1 thru 2</td>
-      <td>Tony Finau +4
-+2 thru 12</td>
+      <td>Will Zalatoris -1
+E thru 3</td>
+      <td>Tony Finau +5
++3 thru 13</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -333,15 +333,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -2
 -1 thru 3</td>
       <td>Patrick Cantlay +2
 +1 thru 6</td>
       <td>Jon Rahm(W) +4
 +2 thru 9</td>
-      <td>Tony Finau +4
-+2 thru 12</td>
+      <td>Tony Finau +5
++3 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
